# cmake-study

./: README.md  新建文本文档.txt
Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx  tutorial.h.in
Step3/: CMakeLists.txt
Step3.1/: CMakeLists.txt  tutorial.cxx
Step3.1/MyMathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt  tutorial.h.in
Step4/MyMathFunctions/: CMakeLists.txt
